syntax = "proto3";

package core;

message User{
  string username = 1;
  string role = 2;
}

message  RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message StatusResponse{
  bool status = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse  {
  string token = 2;
  User user = 3;
}

message validateRequest{
  string token = 1;
}

message ChangePasswordRequest{
  string email = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message DeleteUserRequest{
  string email = 1;
  string password = 2;
}

service AuthService{
  rpc Register(RegisterRequest) returns (StatusResponse){}
  rpc Login(LoginRequest) returns (LoginResponse){}
  rpc ValidateToken(validateRequest) returns (User){}
  rpc ChangePassword(ChangePasswordRequest) returns (StatusResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (StatusResponse) {}
}
